--- a/index.html
+++ b/index.html
@@ -42,17 +42,37 @@
     <br>
 
     <div class="container">
+        <!-- Jumbotron -->
         <div class="row">
             <div class="col-md-12">
-                <div class="jumbotron">
-                    <h1 class="display-4">Kobe Matias</h1>
+                <div class="jumbotron bg-dark text-light">
+                    <h1 class="display-4">Kobe Matias <span></span></h1>
+                    <h2 class="display-5">Multi-media Artist</h2>
+                    <hr class="my-3">
                     <p class="lead">Welcome to my portfolio website!</p>
                     <hr class="my-4">
                     <p>Check out some of my work!</p>
-                    <a class="btn btn-dark btn-lg" href="portfolio.html" role="button">Portfolio</a>
+                    <a class="btn btn-secondary btn-lg" href="portfolio.html" role="button">Portfolio</a>
                 </div>
             </div>
         </div>
+        <!-- About me -->
+        <div class="card mb-3" style="max-width: 100%;">
+            <div class="row no-gutters">
+                <div class="col-md-8 bg-dark text-light">
+                    <div class="card-body">
+                        <h2 class="card-title">About Me</h5>
+                        <p class="card-text">A highly-motivated, bi-cultural, fresh college graduate with a degree in Bachelors of Arts, majored in Multimedia Arts who is eager to find a position with a company where I could hone, grow and perfect my skills. I am hard-working, eager to learn, can easily adapt to any work environment, and extremely personable.</p>
+                        <p class="card-text"><class="text-light">Birthday: 03/09/98</p>
+                        <p class="card-text"><class="text-light">Age: 22</p>
+
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="images/profile.jpg" class="card-img" alt="profile picture">
+                </div>
+            </div>
+          </div>
     </div>
 
 
