contact page added + style css modified

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,14 @@
 
     <!-- Personal CSS -->
     <link rel="stylesheet" href="css/style.css">
+    
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
+  
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
     <title>Kobe Matias</title>
   </head>
 
@@ -35,7 +43,44 @@
             </div>
         </nav>        
     </header>
+  <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card mb-12 animated fadeInLeft delay-1s">
+            <div class="row no-gutters">
+              <div class="col-md-12 bg-dark text-light">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <h1 class="display-4">Contact <span></span></h1>
+                      </div>
+                    </div>
 
+                    <form>
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email Address" aria-describedby="emailHelp">
+                        <small id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</small>
+                      </div>
+                      <div class="form-group">
+                        <label for="formGroupExampleInput">Name</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Full Name">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
+                      </div>
+                      <br>
+                      <button type="submit" class="btn btn-light text-dark">Submit</button>
+                    </form>
+                  </div>
+               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
