--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 
     <!-- Personal CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Kobe Matias</title>
+    
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
-  </head>
+  
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
+    <title>Kobe Matias</title>
+</head>
 
   <body>
     <header>
@@ -45,7 +50,7 @@
         <!-- Jumbotron -->
         <div class="row">
             <div class="col-md-12">
-                <div class="jumbotron bg-dark text-light">
+                <div class="jumbotron bg-dark text-light animated fadeInLeft delay-1s">
                     <h1 class="display-4">Kobe Matias <span></span></h1>
                     <h2 class="display-5">Multi-media Artist</h2>
                     <hr class="my-3">
@@ -57,7 +62,7 @@
             </div>
         </div>
         <!-- About me -->
-        <div class="card mb-3" style="max-width: 100%;">
+        <div class="card mb-12 animated fadeInLeft delay-2s">
             <div class="row no-gutters">
                 <div class="col-md-8 bg-dark text-light">
                     <div class="card-body">
@@ -73,6 +78,7 @@
                 </div>
             </div>
           </div>
+          <br>
     </div>
 
 
