--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,14 @@
 
     <!-- Personal CSS -->
     <link rel="stylesheet" href="css/style.css">
+    
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
+  
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
     <title>Kobe Matias</title>
   </head>
 
