portfolio completed + additional css animation delay added

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,65 @@
             </div>
         </nav>        
     </header>
+    <br>
+    <div class="container">
+      <!-- Jumbotron -->
+      <div class="row">
+        <div class="col-md-12">
+            <div class="jumbotron bg-dark text-light animated fadeInDown delay-1s">
+                <h1 class="display-4" style="text-align: center;" >Portfolio</h1>
+                <hr class="my-3">
+            </div>
+        </div>
+    </div>
 
+      <div class="row">
+        <div class="col-lg-6 mb-4 animated fadeInLeft delay-1s">
+          <div class="card h-100 bg-dark text-light">
+            <a target="_blank" href="https://www.youtube.com/watch?v=Fst17p_13nA&feature=youtu.be"><img class="card-img-top" src="images/Duck.jpg" alt="Duck Song"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a target="_blank" class="text-light" href="https://www.youtube.com/watch?v=Fst17p_13nA&feature=youtu.be">Duck Song</a>
+              </h4>
+              <p class="card-text">My take on forrestfire101's "The Duck Song".</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mb-4 animated fadeInRight delay-1-1qtr">
+          <div class="card h-100 bg-dark text-light">
+            <a target="_blank" href="https://www.youtube.com/watch?v=JMc74PRCmN4&feature=youtu.be"><img class="card-img-top" src="images/AdventuresofCarl.jpg" alt="Adventures of Carl"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a target="_blank" class="text-light" href="https://www.youtube.com/watch?v=JMc74PRCmN4&feature=youtu.be">Adventures of Carl</a>
+              </h4>
+              <p class="card-text">My First 2D animation.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mb-4 animated fadeInLeft delay-1-3qtr">
+          <div class="card h-100 bg-dark text-light">
+            <a target="_blank" href="https://www.youtube.com/watch?v=5-WMhKYoV6c&feature=youtu.be"><img class="card-img-top" src="images/sthelm.jpg" alt="stormtrooper helmet"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a target="_blank" class="text-light" href="https://www.youtube.com/watch?v=5-WMhKYoV6c&feature=youtu.be">Stormtrooper Helmet</a>
+              </h4>
+              <p class="card-text">My first project in motion graphics and tracking.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mb-4 animated fadeInRight delay-2s">
+          <div class="card h-100 bg-dark text-light">
+            <a target="_blank" href="https://www.youtube.com/watch?v=4SZn0jn2Tt8&feature=youtu.be"><img class="card-img-top" src="images/WINTERCARN.jpg" alt="Winter Carnival"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a target="_blank" class="text-light" href="https://www.youtube.com/watch?v=4SZn0jn2Tt8&feature=youtu.be">3D Modelled Winter Carnival</a>
+              </h4>
+              <p class="card-text">My final project in 3D animation and modelling.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
