further updated css and animation

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="card mb-12 animated fadeInLeft delay-1s">
+          <div class="card mb-12 animated fadeInDown delay-1s">
             <div class="row no-gutters">
               <div class="col-md-12 bg-dark text-light">
                   <div class="card-body">
