--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p class="lead">Welcome to my portfolio website!</p>
                     <hr class="my-4">
                     <p>Check out some of my work!</p>
-                    <a class="btn btn-secondary btn-lg" href="portfolio.html" role="button">Portfolio</a>
+                    <a class="btn btn-dark btn-lg" href="portfolio.html" role="button">Portfolio</a>
                 </div>
             </div>
         </div>
