added on hover animation

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 
       <div class="row">
         <div class="col-lg-6 mb-4 animated fadeInLeft delay-1s">
-          <div class="card h-100 bg-dark text-light">
+          <div class="card h-100 bg-dark text-light zoom">
             <a target="_blank" href="https://www.youtube.com/watch?v=Fst17p_13nA&feature=youtu.be"><img class="card-img-top" src="images/Duck.jpg" alt="Duck Song"></a>
             <div class="card-body">
               <h4 class="card-title">
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="col-lg-6 mb-4 animated fadeInRight delay-1-1qtr">
-          <div class="card h-100 bg-dark text-light">
+          <div class="card h-100 bg-dark text-light zoom">
             <a target="_blank" href="https://www.youtube.com/watch?v=JMc74PRCmN4&feature=youtu.be"><img class="card-img-top" src="images/AdventuresofCarl.jpg" alt="Adventures of Carl"></a>
             <div class="card-body">
               <h4 class="card-title">
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="col-lg-6 mb-4 animated fadeInLeft delay-1-3qtr">
-          <div class="card h-100 bg-dark text-light">
+          <div class="card h-100 bg-dark text-light zoom">
             <a target="_blank" href="https://www.youtube.com/watch?v=5-WMhKYoV6c&feature=youtu.be"><img class="card-img-top" src="images/sthelm.jpg" alt="stormtrooper helmet"></a>
             <div class="card-body">
               <h4 class="card-title">
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="col-lg-6 mb-4 animated fadeInRight delay-2s">
-          <div class="card h-100 bg-dark text-light">
+          <div class="card h-100 bg-dark text-light zoom">
             <a target="_blank" href="https://www.youtube.com/watch?v=4SZn0jn2Tt8&feature=youtu.be"><img class="card-img-top" src="images/WINTERCARN.jpg" alt="Winter Carnival"></a>
             <div class="card-body">
               <h4 class="card-title">
