added more hover css + footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!-- Personal CSS -->
     <link rel="stylesheet" href="css/style.css">
     
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
   
@@ -57,12 +56,12 @@
                     <p class="lead">Welcome to my portfolio website!</p>
                     <hr class="my-4">
                     <p>Check out some of my work!</p>
-                    <a class="btn btn-dark btn-lg" href="portfolio.html" role="button">Portfolio</a>
+                    <a class="btn btn-dark btn-lg zoom" href="portfolio.html" role="button">Portfolio</a>
                 </div>
             </div>
         </div>
         <!-- About me -->
-        <div class="card mb-4 animated fadeInLeft delay-2s">
+        <div class="card mb-4 animated fadeInRight delay-1-1qtr">
             <div class="row no-gutters">
                 <div class="col-md-8 bg-dark text-light">
                     <div class="card-body">
@@ -80,6 +79,12 @@
           </div>
           <br>
     </div>
+
+    <footer id="sticky-footer" class="py-4 bg-dark text-light">
+        <div class="container text-center">
+          <small>Copyright &copy; Kobe Matias 2020</small>
+        </div>
+    </footer>
 
 
     <!-- Optional JavaScript -->
