--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,6 @@
 
     <!-- Personal CSS -->
     <link rel="stylesheet" href="css/style.css">
-    
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
@@ -44,6 +43,8 @@
         </nav>        
     </header>
   <br>
+
+  <!-- Contact Form -->
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -72,7 +73,7 @@
                         <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
                       </div>
                       <br>
-                      <button type="submit" class="btn btn-light text-dark">Submit</button>
+                      <button type="submit" class="btn btn-light text-dark zoom">Submit</button>
                     </form>
                   </div>
                </div>
@@ -82,6 +83,11 @@
       </div>
     </div>
 
+    <footer id="sticky-footer" class="py-4 bg-dark text-light">
+      <div class="container text-center">
+        <small>Copyright &copy; Kobe Matias 2020</small>
+      </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
