--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- Personal CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="stylesheet" href="css/style.css">  
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
@@ -55,6 +54,7 @@
         </div>
     </div>
 
+    <!-- Portfolio Content -->
       <div class="row">
         <div class="col-lg-6 mb-4 animated fadeInLeft delay-1s">
           <div class="card h-100 bg-dark text-light zoom">
@@ -102,6 +102,12 @@
         </div>
       </div>
     </div>
+
+    <footer id="sticky-footer" class="py-4 bg-dark text-light">
+      <div class="container text-center">
+        <small>Copyright &copy; Kobe Matias 2020</small>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
