--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
-  
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <!-- Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
@@ -22,7 +23,7 @@
 
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="index.html">Kobe Matias</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -49,7 +50,7 @@
         <!-- Jumbotron -->
         <div class="row">
             <div class="col-md-12">
-                <div class="jumbotron bg-dark text-light animated fadeInLeft delay-1s">
+                <div class="jumbotron animated fadeInLeft delay-1s">
                     <h1 class="display-4">Kobe Matias <span></span></h1>
                     <h2 class="display-5">Multi-media Artist</h2>
                     <hr class="my-3">
@@ -63,7 +64,7 @@
         <!-- About me -->
         <div class="card mb-4 animated fadeInRight delay-1-1qtr">
             <div class="row no-gutters">
-                <div class="col-md-8 bg-dark text-light">
+                <div class="col-md-8">
                     <div class="card-body">
                         <h2 class="card-title">About Me</h2>
                         <p class="card-text">A highly-motivated, bi-cultural, fresh college graduate with a degree in Bachelors of Arts, majored in Multimedia Arts who is eager to find a position with a company where I could hone, grow and perfect my skills. I am hard-working, eager to learn, can easily adapt to any work environment, and extremely personable.</p>
@@ -79,7 +80,7 @@
           <br>
     </div>
 
-    <footer id="sticky-footer" class="py-4 bg-dark text-light">
+    <footer id="sticky-footer" class="py-4">
         <div class="container text-center">
           <small>Copyright &copy; Kobe Matias 2020</small>
         </div>
