--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="index.html">Kobe Matias</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
         <div class="col-md-12">
           <div class="card mb-12 animated fadeInDown delay-1s">
             <div class="row no-gutters">
-              <div class="col-md-12 bg-dark text-light">
+              <div class="col-md-12">
                   <div class="card-body">
                     <div class="row">
                       <div class="col-md-12">
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <footer id="sticky-footer" class="py-4 bg-dark text-light">
+    <footer id="sticky-footer" class="py-4">
       <div class="container text-center">
         <small>Copyright &copy; Kobe Matias 2020</small>
       </div>
