--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="index.html">Kobe Matias</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
       <!-- Jumbotron -->
       <div class="row">
         <div class="col-md-12">
-            <div class="jumbotron bg-dark text-light animated fadeInDown delay-1s">
+            <div class="jumbotron animated fadeInDown delay-1s">
                 <h1 class="display-4" style="text-align: center;" >Portfolio</h1>
                 <hr class="my-3">
             </div>
@@ -57,44 +57,44 @@
     <!-- Portfolio Content -->
       <div class="row">
         <div class="col-lg-6 mb-4 animated fadeInLeft delay-1s">
-          <div class="card h-100 bg-dark text-light zoom">
+          <div class="card h-100 zoom">
             <a target="_blank" href="https://www.youtube.com/watch?v=Fst17p_13nA&feature=youtu.be"><img class="card-img-top" src="images/Duck.jpg" alt="Duck Song"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a target="_blank" class="text-light" href="https://www.youtube.com/watch?v=Fst17p_13nA&feature=youtu.be">Duck Song</a>
+                <a target="_blank" class="text-dark" href="https://www.youtube.com/watch?v=Fst17p_13nA&feature=youtu.be">Duck Song</a>
               </h4>
               <p class="card-text">My take on forrestfire101's "The Duck Song".</p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 mb-4 animated fadeInRight delay-1-1qtr">
-          <div class="card h-100 bg-dark text-light zoom">
+          <div class="card h-100 zoom">
             <a target="_blank" href="https://www.youtube.com/watch?v=JMc74PRCmN4&feature=youtu.be"><img class="card-img-top" src="images/AdventuresofCarl.jpg" alt="Adventures of Carl"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a target="_blank" class="text-light" href="https://www.youtube.com/watch?v=JMc74PRCmN4&feature=youtu.be">Adventures of Carl</a>
+                <a target="_blank" class="text-dark" href="https://www.youtube.com/watch?v=JMc74PRCmN4&feature=youtu.be">Adventures of Carl</a>
               </h4>
               <p class="card-text">My First 2D animation.</p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 mb-4 animated fadeInLeft delay-1-3qtr">
-          <div class="card h-100 bg-dark text-light zoom">
+          <div class="card h-100 zoom">
             <a target="_blank" href="https://www.youtube.com/watch?v=5-WMhKYoV6c&feature=youtu.be"><img class="card-img-top" src="images/sthelm.jpg" alt="stormtrooper helmet"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a target="_blank" class="text-light" href="https://www.youtube.com/watch?v=5-WMhKYoV6c&feature=youtu.be">Stormtrooper Helmet</a>
+                <a target="_blank" class="text-dark" href="https://www.youtube.com/watch?v=5-WMhKYoV6c&feature=youtu.be">Stormtrooper Helmet</a>
               </h4>
               <p class="card-text">My first project in motion graphics and tracking.</p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 mb-4 animated fadeInRight delay-2s">
-          <div class="card h-100 bg-dark text-light zoom">
+          <div class="card h-100 zoom">
             <a target="_blank" href="https://www.youtube.com/watch?v=4SZn0jn2Tt8&feature=youtu.be"><img class="card-img-top" src="images/WINTERCARN.jpg" alt="Winter Carnival"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a target="_blank" class="text-light" href="https://www.youtube.com/watch?v=4SZn0jn2Tt8&feature=youtu.be">3D Modelled Winter Carnival</a>
+                <a target="_blank" class="text-dark" href="https://www.youtube.com/watch?v=4SZn0jn2Tt8&feature=youtu.be">3D Modelled Winter Carnival</a>
               </h4>
               <p class="card-text">My final project in 3D animation and modelling.</p>
             </div>
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <footer id="sticky-footer" class="py-4 bg-dark text-light">
+    <footer id="sticky-footer" class="py-4">
       <div class="container text-center">
         <small>Copyright &copy; Kobe Matias 2020</small>
       </div>
