--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,13 @@
 
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light navbar-toggleable-md">
             <a class="navbar-brand" href="index.html">Kobe Matias</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
                 </li>
@@ -70,7 +70,7 @@
                       </div>
                       <div class="form-group">
                         <label for="exampleFormControlTextarea1">Message</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="4"></textarea>
                       </div>
                       <br>
                       <button type="submit" class="btn btn-light text-dark zoom">Submit</button>
