final tweaks to css and html along with written README

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <div class="jumbotron animated fadeInLeft delay-1s">
                     <h1 class="display-4">Kobe Matias <span></span></h1>
                     <h2 class="display-5">Multi-media Artist</h2>
-                    <hr class="my-3">
+                    <hr>
                     <p class="lead">Welcome to my portfolio website!</p>
-                    <hr class="my-4">
+                    <hr>
                     <p>Check out some of my work!</p>
                     <a class="btn btn-dark btn-lg zoom" href="portfolio.html" role="button">Portfolio</a>
                 </div>
@@ -68,6 +68,7 @@
                     <div class="card-body">
                         <h2 class="card-title">About Me</h2>
                         <p class="card-text">A highly-motivated, bi-cultural, fresh college graduate with a degree in Bachelors of Arts, majored in Multimedia Arts who is eager to find a position with a company where I could hone, grow and perfect my skills. I am hard-working, eager to learn, can easily adapt to any work environment, and extremely personable.</p>
+                        <p class="card-text"><class="text-light">DLS-CSB Bachelor of Arts in Multimedia Arts</p>
                         <p class="card-text"><class="text-light">Birthday: 03/09/98</p>
                         <p class="card-text"><class="text-light">Age: 22</p>
                     </div>
