--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,8 @@
   <!-- Contact Form -->
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
           <div class="card mb-12 animated fadeInDown delay-1s">
             <div class="row no-gutters">
               <div class="col-md-12">
@@ -62,7 +63,7 @@
                       <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email Address" aria-describedby="emailHelp">
-                        <small id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</small>
+                        <small id="emailHelp" class="form-text text-dark">We'll never share your email with anyone else.</small>
                       </div>
                       <div class="form-group">
                         <label for="formGroupExampleInput">Name</label>
@@ -80,6 +81,7 @@
             </div>
           </div>
         </div>
+        <div class="col-md-2"></div>
       </div>
     </div>
 
