minor content proof-reading

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="card-body">
                         <h2 class="card-title">About Me</h2>
                         <p class="card-text">A highly-motivated, bi-cultural, fresh college graduate with a degree in Bachelors of Arts, majored in Multimedia Arts who is eager to find a position with a company where I could hone, grow and perfect my skills. I am hard-working, eager to learn, can easily adapt to any work environment, and extremely personable.</p>
-                        <p class="card-text"><class="text-light">DLS-CSB Bachelor of Arts in Multimedia Arts</p>
+                        <p class="card-text"><class="text-light">DLS-CSB Bachelor of Arts in Multi-media Arts</p>
                         <p class="card-text"><class="text-light">Birthday: 03/09/98</p>
                         <p class="card-text"><class="text-light">Age: 22</p>
                     </div>
